// Vitest Snapshot v1

exports[`xuanji1 > title & dates 1`] = `
[
  "中国社会各阶级的分析",
  "湖南农民运动考察报告",
  "中国的红色政权为什么能够存在？",
  "井冈山的斗争",
  "关于纠正党内的错误思想",
  "星星之火，可以燎原",
  "必须注意经济工作",
  "怎样分析农村阶级",
  "我们的经济政策",
  "关心群众生活，注意工作方法",
  "论反对日本帝国主义的策略",
  "中国革命战争的战略问题",
  "关于蒋介石声明的声明",
  "中国共产党在抗日时期的任务",
  "为争取千百万群众进入抗日民族统一战线而斗争",
  "实践论",
  "矛盾论",
]
`;

exports[`xuanji1 > title & dates 2`] = `
[
  [
    {
      "day": 1,
      "month": 12,
      "year": 1925,
    },
  ],
  [
    {
      "day": undefined,
      "month": 3,
      "year": 1927,
    },
  ],
  [
    {
      "day": 5,
      "month": 10,
      "year": 1928,
    },
  ],
  [
    {
      "day": 25,
      "month": 11,
      "year": 1928,
    },
  ],
  [
    {
      "day": undefined,
      "month": 12,
      "year": 1929,
    },
  ],
  [
    {
      "day": 5,
      "month": 1,
      "year": 1930,
    },
  ],
  [
    {
      "day": 12,
      "month": 8,
      "year": 1933,
    },
  ],
  [
    {
      "day": undefined,
      "month": 10,
      "year": 1933,
    },
  ],
  [
    {
      "day": undefined,
      "month": 1,
      "year": 1934,
    },
  ],
  [
    {
      "day": 27,
      "month": 1,
      "year": 1934,
    },
  ],
  [
    {
      "day": 27,
      "month": 12,
      "year": 1935,
    },
  ],
  [
    {
      "day": undefined,
      "month": 12,
      "year": 1936,
    },
  ],
  [
    {
      "day": 28,
      "month": 12,
      "year": 1936,
    },
  ],
  [
    {
      "day": 3,
      "month": 5,
      "year": 1937,
    },
  ],
  [
    {
      "day": 8,
      "month": 5,
      "year": 1937,
    },
  ],
  [
    {
      "day": undefined,
      "month": 7,
      "year": 1937,
    },
  ],
  [
    {
      "day": undefined,
      "month": 8,
      "year": 1937,
    },
  ],
]
`;

exports[`xuanji2 > title & dates 1`] = `
[
  "反对日本进攻的方针、办法和前途",
  "为动员一切力量争取抗战胜利而斗争",
  "反对自由主义",
  "国共合作成立后的迫切任务",
  "和英国记者贝特兰的谈话",
  "上海太原失陷以后抗日战争的形势和任务",
  "陕甘宁边区政府第八路军后方留守处布告",
  "抗日游击战争的战略问题",
  "论持久战",
  "中国共产党在民族战争中的地位",
  "统一战线中的独立自主问题",
  "战争和战略问题",
  "五四运动",
  "青年运动的方向",
  "反对投降活动",
  "必须制裁反动派",
  "关于国际新形势对新华日报记者的谈话",
  "和中央社、扫荡报、新民报三记者的谈话",
  "苏联利益和人类利益的一致",
  "《共产党人》发刊词",
  "目前形势和党的任务",
  "大量吸收知识分子",
  "中国革命和中国共产党",
  "斯大林是中国人民的朋友",
  "纪念白求恩",
  "新民主主义论",
  "克服投降危险，力争时局好转",
  "团结一切抗日力量，反对反共顽固派",
  "向国民党的十点要求",
  "《中国工人》发刊词",
  "必须强调团结和进步",
  "新民主主义的宪政",
  "抗日根据地的政权问题",
  "目前抗日统一战线中的策略问题",
  "放手发展抗日力量，抵抗反共顽固派的进攻",
  "团结到底",
  "论政策",
  "为皖南事变发表的命令和谈话",
  "中国共产党中央革命军事委员会发言人对新华社记者的谈话",
  "打退第二次反共高潮后的时局",
  "关于打退第二次反共高潮的总结",
]
`;

exports[`xuanji2 > title & dates 2`] = `
[
  [
    {
      "day": 23,
      "month": 7,
      "year": 1937,
    },
  ],
  [
    {
      "day": 25,
      "month": 8,
      "year": 1937,
    },
  ],
  [
    {
      "day": 7,
      "month": 9,
      "year": 1937,
    },
  ],
  [
    {
      "day": 29,
      "month": 9,
      "year": 1937,
    },
  ],
  [
    {
      "day": 25,
      "month": 10,
      "year": 1937,
    },
  ],
  [
    {
      "day": 12,
      "month": 11,
      "year": 1937,
    },
  ],
  [
    {
      "day": 15,
      "month": 5,
      "year": 1938,
    },
  ],
  [
    {
      "day": undefined,
      "month": 5,
      "year": 1938,
    },
  ],
  [
    {
      "day": undefined,
      "month": 5,
      "year": 1938,
    },
  ],
  [
    {
      "day": 14,
      "month": 10,
      "year": 1938,
    },
  ],
  [
    {
      "day": 5,
      "month": 11,
      "year": 1938,
    },
  ],
  [
    {
      "day": 6,
      "month": 11,
      "year": 1938,
    },
  ],
  [
    {
      "day": 1,
      "month": 5,
      "year": 1939,
    },
  ],
  [
    {
      "day": 4,
      "month": 5,
      "year": 1939,
    },
  ],
  [
    {
      "day": 30,
      "month": 6,
      "year": 1939,
    },
  ],
  [
    {
      "day": 1,
      "month": 8,
      "year": 1939,
    },
  ],
  [
    {
      "day": 1,
      "month": 9,
      "year": 1939,
    },
  ],
  [
    {
      "day": 16,
      "month": 9,
      "year": 1939,
    },
  ],
  [
    {
      "day": 28,
      "month": 9,
      "year": 1939,
    },
  ],
  [
    {
      "day": 4,
      "month": 10,
      "year": 1939,
    },
  ],
  [
    {
      "day": 10,
      "month": 10,
      "year": 1939,
    },
  ],
  [
    {
      "day": 1,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": undefined,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": 20,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": 21,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": undefined,
      "month": 1,
      "year": 1940,
    },
  ],
  [
    {
      "day": 28,
      "month": 1,
      "year": 1940,
    },
  ],
  [
    {
      "day": 1,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 1,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 7,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 7,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 20,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 6,
      "month": 3,
      "year": 1940,
    },
  ],
  [
    {
      "day": 11,
      "month": 3,
      "year": 1940,
    },
  ],
  [
    {
      "day": 4,
      "month": 5,
      "year": 1940,
    },
  ],
  [
    {
      "day": 5,
      "month": 7,
      "year": 1940,
    },
  ],
  [
    {
      "day": 25,
      "month": 12,
      "year": 1940,
    },
  ],
  [
    {
      "day": undefined,
      "month": 1,
      "year": 1941,
    },
  ],
  [
    {
      "day": 22,
      "month": 1,
      "year": 1941,
    },
  ],
  [
    {
      "day": 18,
      "month": 3,
      "year": 1941,
    },
  ],
  [
    {
      "day": 8,
      "month": 5,
      "year": 1941,
    },
  ],
]
`;
